sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:12: error: value -= is not a member of Int
    end -= 1
        ^AlgCocktailSort2:16: error: value += is not a member of Int
    beg +=1
        ^